--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,10 +1,4 @@
 .header {
-  height: 100vh;
-  min-height: 600px;
-  max-height: 756px;
   display: flex;
-  align-items: center;
-  background-color: #f2f2f2;
-  position: relative;
-  overflow: hidden;
+  justify-content: space-between;
 }
