--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,7 +1,15 @@
 .page {
+  padding-top: 28px;
   position: relative;
-  min-width: 1100px;
-  max-width: 1600px;
+  min-width: 320px;
+  max-width: 1280px;
   margin: 0 auto;
   font-family: "Inter", "Arial", sans-serif;
+  background-color: #2a2c2f;
+}
+
+@media all and (max-width: 320px) {
+  .page {
+    padding-top: 16px;
+  }
 }
