--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,24 @@
 .footer {
-    box-sizing: border-box;
-    padding: 60px 0 40px;
-    background-color: #1f1f1f;
-    display: flex;
-    justify-content: center;
-    min-height: 350px;
+  max-width: 1184px;
+  margin: 92px auto 24px;
+}
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    max-width: 928px;
+  }
+}
+
+
+@media screen and (max-width: 800px) {
+  .footer {
+    max-width: 720px;
+    margin: 88px auto 24px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .footer {
+    margin: 64px auto 24px;
+  }
 }
