--- a/blocks/intro/_place/intro_place_content.css
+++ b/blocks/intro/_place/intro_place_content.css
@@ -5,20 +5,20 @@
 
 @media screen and (max-width: 1024px) {
   .intro_place_content {
-    margin-left: 48px;
+    margin: 0 48px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .intro_place_content {
-    margin-left: 24px;
+    margin: 0 24px;
     margin-bottom: 88px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .intro_place_content {
-    margin-left: 16px;
+    margin: 0 16px;
     margin-bottom: 64px;
   }
 }
