--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,8 @@
 .footer {
   max-width: 1184px;
   margin: 92px auto 24px;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 1023px) {
@@ -9,11 +11,17 @@
   }
 }
 
-
 @media screen and (max-width: 800px) {
   .footer {
     max-width: 720px;
     margin: 88px auto 24px;
+  }
+}
+
+@media screen and (max-width: 565px) {
+  .footer {
+    flex-direction: column;
+    padding-left: 16px;
   }
 }
 
