--- a/blocks/places/__url-heading/places__url-heading.css
+++ b/blocks/places/__url-heading/places__url-heading.css
@@ -1,6 +1,9 @@
-.places__url-heading{
-    color: #aaa;
-    font-size: 12px;
-    line-height: 12px;
-    font-weight: 400;
+.places__url-heading {
+  color: #aaa;
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: 400;
+  margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
