--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,5 +1,6 @@
 .cover__link {
-  background-image: url(../../../images/cover-trains.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(42,44,47, 0.3)),
+    url("../../../images/cover-trains.jpg");
   text-decoration: none;
   display: flex;
   flex-flow: column;
@@ -8,10 +9,10 @@
   background-size: cover;
   max-width: 1184px;
   width: 100%;
-  height: 100%;
+  min-height: inherit;
 }
 
 .cover__link:hover {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(31, 29, 29, 0.8)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(42,44,47, 0.8)),
     url("../../../images/cover-trains.jpg");
 }
