--- a/blocks/header/__links/header__lang-links.css
+++ b/blocks/header/__links/header__lang-links.css
@@ -1,5 +1,8 @@
 .header__lang-links {
   list-style-type: none;
   display: flex;
+  align-items: center;
   gap: 18px;
+  margin: 0;
+  padding: 0;
 }
