--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -6,17 +6,22 @@
   margin: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .places__title {
     font-size: 42px;
     line-height: 46px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 767px) {
   .places__title {
     font-size: 32px;
     line-height: 35px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places__title {
     padding-left: 16px;
   }
 }
