--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
   max-width: 1184px;
-  margin: 92px auto 24px;
+  margin: 92px 48px 24px;
   display: flex;
   justify-content: space-between;
 }
@@ -14,7 +14,7 @@
 @media screen and (max-width: 800px) {
   .footer {
     max-width: 720px;
-    margin: 88px auto 24px;
+    margin: 88px 24px 24px;
   }
 }
 
