--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,7 +1,7 @@
 .header__lang-link {
   color: #fff;
   text-decoration: none;
-  font-style: 24px;
+  font-size: 24px;
   line-height: 28px;
   font-weight: 400;
   
@@ -9,7 +9,7 @@
 
 @media all and (max-width: 320px) {
   .header__lang-link {
-    font-style: 18px;
+    font-size: 18px;
     line-height: 20px;
   }
 }
