--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -4,16 +4,16 @@
   height: 615px;
 }
 
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1279px) {
   .lead__image {
     width: 928px;
     height: 580px;
   }
 }
 
-@media all and (max-width: 928px) {
+@media all and (max-width: 1023px) {
   .lead__image {
-    width: 768px;
+    width: 100%;
     height: 480px;
   }
 }
@@ -27,6 +27,7 @@
 
 @media all and (max-width: 500px) {
   .lead__image {
+    min-width: 302px;
     width: 100%;
     height: 200px;
   }
