--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,5 +1,4 @@
 .root {
-  padding-top: 28px;
   position: relative;
   min-width: 320px;
   max-width: 1280px;
@@ -10,10 +9,5 @@
 .body {
   background-color: #2a2c2f;
   text-rendering: optimizeLegibility;
-}
-
-@media all and (max-width: 320px) {
-  .page {
-    padding-top: 16px;
-  }
+  overflow-x: hidden;
 }
