--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,5 +1,6 @@
 .cover__link {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(42,44,47, 0.3)),
+  padding-top: 33px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(42, 44, 47, 0.3)),
     url("../../../images/cover-trains.jpg");
   text-decoration: none;
   display: flex;
@@ -13,6 +14,6 @@
 }
 
 .cover__link:hover {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(42,44,47, 0.8)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(42, 44, 47, 0.8)),
     url("../../../images/cover-trains.jpg");
 }
