--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -7,21 +7,20 @@
 @media all and (max-width: 1279px) {
   .lead__image {
     width: 928px;
-    height: 580px;
+    height: min-content;
+    object-fit: cover;
   }
 }
 
 @media all and (max-width: 1023px) {
   .lead__image {
     width: 100%;
-    height: 480px;
   }
 }
 
-@media all and (max-width: 769px) {
+@media all and (max-width: 767px) {
   .lead__image {
     width: 100%;
-    height: calc(100vw / 1.6);
   }
 }
 
@@ -29,6 +28,5 @@
   .lead__image {
     min-width: 302px;
     width: 100%;
-    height: 200px;
   }
 }
