--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,7 @@
 @import url(../vendor/fonts/font.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/link/link.css);
+@import url(../blocks/body/body.css);
 
 @import url(../blocks/content/content.css);
 
